# pixery

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: BACKLOG.md  CHANGELOG.md  MODEL_GUIDE_METHODOLOGY.md
docs/audit/2026-02-06/: 01-code-cleanup.md  02-no-brainer-features.md  03-strategic-features.md  04-infrastructure.md
docs/selfhosted/: selfhosted-clarification-request.md  selfhosted-clarification-response.md  selfhosted-integration-report.md
infra/selfhosted/: OPERATIONS.md  connect.sh  push-server.sh  requirements.txt  server.py  setup-instance.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  cli.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  watcher.rs  workflow.rs
src-tauri/src/providers/: CLAUDE.md  fal.rs  gemini.rs  mod.rs  openai.rs  selfhosted.rs
src/components/: BatchActionBar.tsx  Cheatsheet.tsx  Compare.tsx  ContextMenu.tsx  Dashboard.tsx  Details.tsx  Gallery.tsx  GalleryPickerModal.tsx  GenerateForm.tsx  GenerateModal.tsx  JobsIndicator.tsx  Lightbox.tsx  RemixModal.tsx  Settings.tsx  Sidebar.tsx  TagChips.tsx  TagFilterBar.tsx  Thumbnail.tsx
src/hooks/: useGenerate.ts  useGenerations.ts  useJobs.ts  useKeyboard.ts  useSettings.ts  useTags.ts
src/lib/: api.ts  types.ts
src/styles/: index.css  theme.css
