[package]
name = "pixery"
version = "0.1.0"
description = "Unified image generation tool"
authors = ["Lewis"]
edition = "2021"

[lib]
name = "pixery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pixery"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
image = "0.25"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
dotenvy = "0.15"
slug = "0.1"
thiserror = "1"
anyhow = "1"
regex = "1"

[profile.release]
strip = true
lto = true
